--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -17,7 +17,6 @@ body::-webkit-scrollbar {
   display: none;
 }
 
-
 * {
   font-family: "Jura", serif;
   font-optical-sizing: auto;
@@ -26,17 +25,22 @@ body::-webkit-scrollbar {
   font-size: 50px;
   color: white;
   translate: 'no';
+
 }
 
-
-.main {
+#main {
   height: 500px;
-  width: 1200px;
+  width: 1200px;  
+  height: 100%;
+  width: 100%;
   align-self: center;
-  align-items: center;
   background-color: #181818;
   text-align: center;
   scrollbar-width: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 
@@ -49,7 +53,6 @@ body::-webkit-scrollbar {
   align-self: center;
   align-items: center;
   justify-self: center;
-  top: 200px;
 }
 
 .download_form input {
@@ -124,6 +127,7 @@ ul {
 
 li {
   float: left;
+  transition: all 0.2s ease-out;
 }
 
 li a {
@@ -135,6 +139,7 @@ li a {
   text-decoration: none;
   user-select: none;
   color: #8f8f8f;
+  transition: all 0.2s ease-out;
 }
 
 .bar_icon {
@@ -148,7 +153,8 @@ li a {
 a:hover {
   color: #45f3ff;
   color: #fe1e24;
-  transition: 0.3s;
+  transition: all 0.2s ease-in;
+  /* transform: scale(1.05); */
 
 }
 
@@ -169,8 +175,6 @@ a:hover {
   align-self: center;
   text-align: center;
   justify-self: center;
-  margin-top: 15%;
-  margin-bottom: -150px;
 }
 
 .navigation_settings_bar {
@@ -194,7 +198,7 @@ a:hover {
   padding: 60px;
 }
 
-.setting_cont {
+#setting_cont {
   border-radius: 15px;
   width: 90%;
   height: 80%;
@@ -606,8 +610,10 @@ option {
 }
 
 
-.history_card {
+#history_card {
   margin-top: 4px;
+  width: 100%;
+  height: 100%;
 }
 
 .change_direct {
@@ -624,8 +630,11 @@ option {
   flex-direction: column;
 }
 
-.header_page {
+#header_page {
   z-index: 1000;
+  display: flex;
+  flex-direction: row;
+  height: 70px;
 }
 
 .downloader_loader {
@@ -738,7 +747,8 @@ option {
 
 
 .close_directory_choose {
-  background-color: transparent;
+  background-color: #1f1f1f;
+
   border-radius: 5px;
   position: absolute;
   top: 20px;
@@ -747,6 +757,7 @@ option {
   width: 100px;
   font-size: 21px;
   transition: all 0.3s ease-in-out;
+  border: none;
 }
 
 .close_directory_choose:hover {
@@ -755,12 +766,21 @@ option {
 }
 
 .ok_button_dist_path {
-  background-color: #45f3ff;
+  background-color: #1f1f1f;
+
   border-radius: 5px;
   color: black;
   height: 50px;
   width: 100px;
   margin-top: 20px;
+  font-size: 21px;
+  border: none;
+  color: whitesmoke;
+  transition: all 0.3s ease-in-out;
+}
+.ok_button_dist_path:hover {
+  background-color: #2f4235;
+  transition: all 0.3s ease-in-out;
 }
 
 .choose_directory_button:hover {
@@ -867,4 +887,9 @@ option {
   align-self: center;
   user-select: none;
   margin-top: 250px;
+}
+
+#close-btn {
+  align-self: flex-end;
+  justify-self: flex-end;
 }
