--- a/templates/about.html
+++ b/templates/about.html
@@ -17,21 +17,24 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Gruppo&family=Jura:wght@300..700&family=Noto+Sans+Mono:wght@700&family=Orbitron:wght@400..900&family=Permanent+Marker&family=Poppins:wght@400;700&family=Press+Start+2P&family=Quicksand:wght@700&family=Russo+One&display=swap"
         rel="stylesheet">
-
+    <link href="{{ url_for('static', filename='fonts/Jura-Regular.ttf') }}" rel="stylesheet" />
     <link rel="icon" href="/static/images/icon.ico">
 
 </head>
 
 <body>
-    <ul>
+    <ul id="header_page"  class="pywebview-drag-region">
         <li><a class="bar_icon"></a></li>
         <li><a href="/index">Main</a></li>
         <li><a href="/history">History</a></li>
         <li><a href="/settings">Settings</a></li>
         <li><a href="/about" class="bar_main">About</a></li>
+        <li><a href='' id="close-btn" class="window-btn" onclick="window.pywebview.api.close()">Close APP</a></li>
     </ul>
 
-    <p class="about_text">ARE U LIKE IT?</p>
+    <div id="main" class="pywebview-drag-region">
+        <p class="about_text">ARE U LIKE IT?</p>
+    </div>
 
 </body>
 
