--- a/templates/download.html
+++ b/templates/download.html
@@ -19,20 +19,36 @@
 
     <link rel="icon" href="/static/images/icon.ico">
 
+    <style>
+        .icon {
+            fill: white;
+        }
+    </style>
+
+    <script>
+        // window.onload = function() {
+        //     window.resizeTo(1264, 700);
+        //     window.onresize = function() {
+        //         window.resizeTo(1264, 700);
+        //     };
+        // };
+    </script>
+
 </head>
 
 <body>
     <header>
-        <ul>
+        <ul id="header_page"  class="pywebview-drag-region">
             <li><a class="bar_icon"></a></li>
             <li><a href="/index" class="bar_main">Main</a></li>
             <li><a href="/history">History</a></li>
             <li><a href="/settings">Settings</a></li>
             <li><a href="/about">About</a></li>
+            <li><a href='' id="close-btn" class="window-btn" onclick="window.pywebview.api.close()">Close APP</a></li>
         </ul>
     </header>
 
-    <div class="main_download">
+    <div id="main" class="pywebview-drag-region">
         <span id="downloader_loader" class="downloader_loader"></span>
 
         <p style="white-space: pre-line" class="state-value" id="state-value">{{ state|safe }}</p>
