--- a/templates/index-error.html
+++ b/templates/index-error.html
@@ -38,15 +38,16 @@
 </head>
 
 <body>
-    <ul>
+    <ul id="header_page"  class="pywebview-drag-region">
         <li><a class="bar_icon"></a></li>
         <li><a href="/index" class="bar_main">Main</a></li>
         <li><a href="/history">History</a></li>
         <li><a href="/settings">Settings</a></li>
         <li><a href="/about">About</a></li>
+        <li><a href='' id="close-btn" class="window-btn" onclick="window.pywebview.api.close()">Close APP</a></li>
     </ul>
 
-    <div class="main">
+    <div id="main" class="pywebview-drag-region">
         <p class="error_txt">{{ error_value|safe }}</p>
         <div class="download_form">
 
